delete error log
